--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "uuidv4": "^6.0.9"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.6",
     "@typescript-eslint/eslint-plugin": "^3.0.1",
     "@typescript-eslint/parser": "^3.0.1",
